--- a/templates/website/about.html
+++ b/templates/website/about.html
@@ -31,15 +31,17 @@
 				<div class="col-lg-7">
 					<div class="personal_text">
 						<h6>Hello Everybody, i am</h6>
-						<h3>Donald McKinney</h3>
-						<h4>Junior UI/UX Developer</h4>
-						<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to
-							the ghost showing Scrooge some different futures)</p>
+						<h3>Amirhossein Kashaf</h3>
+						<h4>Junior Django Developer</h4>
+						<p>I'm 26 years old and just interested in coding, I've studied aerospace engineering at
+							university
+							and I hope to become a developer someday!
+						</p>
 						<ul class="list basic_info">
-							<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-							<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-							<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-							<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+							<li><a href="#"><i class="lnr lnr-calendar-full"></i> 9th September, 1998</a></li>
+							<li><a href="#"><i class="lnr lnr-phone-handset"></i> 0921 407 1915</a></li>
+							<li><a href="#"><i class="lnr lnr-envelope"></i>kashafamirhossein@gmail.com</a></li>
+							<li><a href="#"><i class="lnr lnr-home"></i>Tehran, Iran</a></li>
 						</ul>
 						<ul class="list personal_social">
 							<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -61,29 +63,30 @@
 			<div class="col-lg-6">
 				<div class="welcome_text">
 					<h4>About Myself</h4>
-					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct
-						standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on
-						the job is beyond reproach. inappropriate behavior is often laughed.</p>
+					<p>I've studied aerospace engineering at university and it's been about 3 months
+						that I started learning python and after that course,
+						I started django course with maktabkhooneh.
+					</p>
 					<div class="row">
 						<div class="col-md-4">
 							<div class="wel_item">
-								<i class="lnr lnr-database"></i>
-								<h4>$2.5M</h4>
-								<p>Total Donation</p>
+								<i class="lnr lnr-pencil"></i>
+								<h4>2</h4>
+								<p>Projects</p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="wel_item">
-								<i class="lnr lnr-book"></i>
-								<h4>1465</h4>
-								<p>Total Projects</p>
+								<i class="lnr lnr-license"></i>
+								<h4>5</h4>
+								<p>Certificates</p>
 							</div>
 						</div>
 						<div class="col-md-4">
 							<div class="wel_item">
-								<i class="lnr lnr-users"></i>
-								<h4>3965</h4>
-								<p>Total Volunteers</p>
+								<i class="lnr lnr-earth"></i>
+								<h4>1</h4>
+								<p>Languages</p>
 							</div>
 						</div>
 					</div>
@@ -93,7 +96,7 @@
 				<div class="tools_expert">
 					<div class="skill_main">
 						<div class="skill_item">
-							<h4>After Effects <span class="counter">85</span>%</h4>
+							<h4>Python<span class="counter">60</span>%</h4>
 							<div class="progress_br">
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
@@ -111,7 +114,7 @@
 							</div>
 						</div>
 						<div class="skill_item">
-							<h4>Illustrator <span class="counter">70</span>%</h4>
+							<h4>English <span class="counter">90</span>%</h4>
 							<div class="progress_br">
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0"
@@ -120,7 +123,7 @@
 							</div>
 						</div>
 						<div class="skill_item">
-							<h4>Sublime <span class="counter">95</span>%</h4>
+							<h4>Scrum <span class="counter">70</span>%</h4>
 							<div class="progress_br">
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
@@ -129,7 +132,7 @@
 							</div>
 						</div>
 						<div class="skill_item">
-							<h4>Sketch <span class="counter">75</span>%</h4>
+							<h4>Agile Management <span class="counter">80</span>%</h4>
 							<div class="progress_br">
 								<div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
@@ -138,62 +141,10 @@
 							</div>
 						</div>
 					</div>
+
 				</div>
 			</div>
-		</div>
-	</div>
 </section>
 <!--================End Welcome Area =================-->
 
-<!--================Testimonials Area =================-->
-<section class="testimonials_area p_120">
-	<div class="container">
-		<div class="main_title">
-			<h2>Testimonials</h2>
-			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-				You may see some for as low as $.17 each.</p>
-		</div>
-		<div class="testi_inner">
-			<div class="testi_slider owl-carousel">
-				<div class="item">
-					<div class="testi_item">
-						<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If
-							you think about it, you travel across her face</p>
-						<h4>Fanny Spencer</h4>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star-half-o"></i></a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testi_item">
-						<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If
-							you think about it, you travel across her face</p>
-						<h4>Fanny Spencer</h4>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star-half-o"></i></a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testi_item">
-						<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If
-							you think about it, you travel across her face</p>
-						<h4>Fanny Spencer</h4>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star-half-o"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--================End Testimonials Area =================-->
 {% endblock %}
