--- a/templates/website/projects.html
+++ b/templates/website/projects.html
@@ -23,113 +23,23 @@
 <section class="feature_area white_feature p_120">
 	<div class="container">
 		<div class="main_title">
-			<h2>offerings to my clients</h2>
-			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-				You may see some for as low as $.17 each.</p>
+			<h2>My Projects</h2>
+			<p>Here are some of my important projects so you can visit and check.</p>
 		</div>
 		<div class="feature_inner row">
 			<div class="col-lg-4 col-md-6">
 				<div class="feature_item">
-					<i class="flaticon-city"></i>
-					<h4>Architecture</h4>
-					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price. You may see some for as low as $17 each.</p>
+					<a href="{% url 'website:index' %}"><i class="flaticon-sketch"></i></a>
+					<a href="{% url 'website:index' %}">
+						<h4>My Personal Site</h4>
+					</a>
+					<p>This is my first site ever that I made for myself</p>
 				</div>
 			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="feature_item">
-					<i class="flaticon-skyline"></i>
-					<h4>Interior Design</h4>
-					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price. You may see some for as low as $17 each.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="feature_item">
-					<i class="flaticon-sketch"></i>
-					<h4>Concept Design</h4>
-					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price. You may see some for as low as $17 each.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="feature_item">
-					<i class="flaticon-city"></i>
-					<h4>Architecture</h4>
-					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price. You may see some for as low as $17 each.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="feature_item">
-					<i class="flaticon-skyline"></i>
-					<h4>Interior Design</h4>
-					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price. You may see some for as low as $17 each.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-6">
-				<div class="feature_item">
-					<i class="flaticon-sketch"></i>
-					<h4>Concept Design</h4>
-					<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in
-						price. You may see some for as low as $17 each.</p>
-				</div>
-			</div>
+
 		</div>
 	</div>
 </section>
 <!--================End Feature Area =================-->
 
-<!--================Testimonials Area =================-->
-<section class="testimonials_area p_120">
-	<div class="container">
-		<div class="main_title">
-			<h2>Testimonials</h2>
-			<p>If you are looking at blank cassettes on the web, you may be very confused at the difference in price.
-				You may see some for as low as $.17 each.</p>
-		</div>
-		<div class="testi_inner">
-			<div class="testi_slider owl-carousel">
-				<div class="item">
-					<div class="testi_item">
-						<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If
-							you think about it, you travel across her face</p>
-						<h4>Fanny Spencer</h4>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star-half-o"></i></a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testi_item">
-						<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If
-							you think about it, you travel across her face</p>
-						<h4>Fanny Spencer</h4>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star-half-o"></i></a>
-					</div>
-				</div>
-				<div class="item">
-					<div class="testi_item">
-						<p>As conscious traveling Paup ers we must always be oncerned about our dear Mother Earth. If
-							you think about it, you travel across her face</p>
-						<h4>Fanny Spencer</h4>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star"></i></a>
-						<a href="#"><i class="fa fa-star-half-o"></i></a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!--================End Testimonials Area =================-->
 {% endblock %}
