--- a/templates/website/projects.html
+++ b/templates/website/projects.html
@@ -29,8 +29,8 @@
 		<div class="feature_inner row">
 			<div class="col-lg-4 col-md-6">
 				<div class="feature_item">
-					<a href="{% url 'website:index' %}"><i class="flaticon-sketch"></i></a>
-					<a href="{% url 'website:index' %}">
+					<a href="https://github.com/AmirhosseinKashaf/myresume"><i class="flaticon-sketch"></i></a>
+					<a href="https://github.com/AmirhosseinKashaf/myresume">
 						<h4>My Personal Site</h4>
 					</a>
 					<p>This is my first site ever that I made for myself</p>
